--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/vajsp/test#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1"
   }
