--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "启动程序",
-            "program": "${workspaceFolder}\\test.js"
+            "program": "${workspaceFolder}/03.node/01.pachong/index.js"
         }
     ]
 }
