--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "启动程序",
-            "program": "${workspaceFolder}/03.node/01.pachong/index.js"
-        }
+      
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Launch Program",
+        "program": "${workspaceFolder}/原理实现/04.promise实现/12.promise-chain.js"
+      }
     ]
 }
